aspire/CarvedRock-Aspire.AppHost/aspirate-output/carvedrock-identity/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: carvedrock-identity
spec:
  type: ClusterIP
  selector:
    app: carvedrock-identity
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
